Mon Apr 16 06:39:25 GMT 2012  Olly Betts <olly@survex.com>

	* java/Makefile.am: Remove now superfluous old check that SWIG
	  generated at least the sources we wanted - we now check it generated
	  *exactly* the sources we wanted.

Mon Apr 16 06:34:30 GMT 2012  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,java/Makefile.am: Use diff's -c option when
	  comparing the files SWIG generated against those we were expecting to
	  get as the output should be easier to understand.

Wed Apr 11 02:54:46 GMT 2012  Olly Betts <olly@survex.com>

	* python/smoketest3.py,python/testsuite3.py: Update Python 3 tests
	  from Python 2 versions using 2to3.

Thu Apr 05 04:25:45 GMT 2012  Olly Betts <olly@survex.com>

	* README,configure.ac,lua/docs/index.html,lua/util.i: Fix compatibility
	  with Lua 5.2.

Thu Apr 05 04:23:22 GMT 2012  Olly Betts <olly@survex.com>

	* lua/smoketest.lua: Remove bogus \ before q.

Thu Apr 05 03:45:08 GMT 2012  Olly Betts <olly@survex.com>

	* lua/smoketest.lua: Convert tabs to spaces.

Thu Apr 05 03:43:52 GMT 2012  Olly Betts <olly@survex.com>

	* lua/smoketest.lua: Check behaviour of "require 'xapian'" - SWIG 2.0.4
	  and earlier got this wrong.  Part of patch from istr in #593, plus
	  a few tweaks.

Thu Apr 05 03:28:50 GMT 2012  Olly Betts <olly@survex.com>

	* lua/smoketest.lua: Improve expect() function to take an option
	  failure message, to report how values differed, and to compare tables
	  in a smarter way.  Part of patch from istr in #593.

Thu Apr 05 02:46:21 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/thread.t,perl/t/writabledatabase.t: Remove #! lines with -W
	  to fix "Name "Test::More::TODO" used only once: possible typo at
	  /usr/share/perl/5.14/Exporter/Heavy.pm line 190." warnings.

Wed Apr 04 14:06:47 GMT 2012  Olly Betts <olly@survex.com>

	* python/docs/examples/simpleexpand.py: Update to not use deprecated
	  MSet iteration features which have been removed on trunk.  This